--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,16 @@
 {
-    "extends": ["next/core-web-vitals", "next/typescript"],
+    "extends": [
+        "next",
+        "next/core-web-vitals"
+    ],
+    "plugins": ["@typescript-eslint"],
     "rules": {
-        "curly": ["error", "multi-line"]
+        "no-console": ["warn", { "allow": ["error"] }],
+        "@typescript-eslint/no-unused-vars": ["error", { 
+            "argsIgnorePattern": "^_",
+            "varsIgnorePattern": "^_"
+        }],
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/ban-types": "off"
     }
 }
