--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,13 @@
 {
-    "extends": [
-        "next/core-web-vitals",
-        "plugin:@typescript-eslint/recommended"
-    ],
+    "extends": "next/core-web-vitals",
     "rules": {
-        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/no-inferrable-types": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "react-hooks/exhaustive-deps": "off",
         "@typescript-eslint/no-unused-vars": "off",
-        "no-console": "off"
-    },
-    "overrides": [
-        {
-            "files": ["*.d.ts"],
-            "rules": {
-                "@typescript-eslint/no-explicit-any": "off"
-            }
-        }
-    ]
+        "@typescript-eslint/explicit-module-boundary-types": "off",
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/ban-types": "off",
+        "@typescript-eslint/no-non-null-assertion": "off"
+    }
 }
