--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     }
   },
   "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["~src","node_modules", "**/*.bak"]
+  "exclude": ["venv", "__pycache__","node_modules", "**/*.bak"]
 }
