--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "next build && next export",
+        "build": "next build",
         "start": "next start",
         "lint": "next lint"
     },
     "dependencies": {
-        "@types/axios": "^0.14.0",
-        "axios": "^1.4.0",
+        "axios": "latest",
         "framer-motion": "^10.15.1",
         "lodash": "^4.17.21",
         "lucide-react": "^0.263.1",
@@ -19,7 +18,6 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "socket.io-client": "^4.8.1",
-        "@groq/sdk": "^0.3.0",
         "tailwindcss": "^3.3.3",
         "postcss": "^8.4.47",
         "autoprefixer": "^10.4.15"
@@ -31,7 +29,7 @@
         "@types/react-dom": "^18.2.7",
         "@typescript-eslint/eslint-plugin": "^5.62.0",
         "@typescript-eslint/parser": "^5.62.0",
-        "eslint": "^8.45.0",
+        "eslint": "^9.0.0",
         "eslint-config-next": "13.4.12",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
