--- a/pytest.ini
+++ b/pytest.ini
@@ -8,4 +8,5 @@ markers =
     integration: marks tests as integration tests
     smoke: marks tests as smoke tests
 
-asyncio_mode = auto 
+asyncio_mode = auto
+pythonpath = src/service
