unit tests for service passed and docker integration tests passed colab with fron client ok stable

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,8 +5,8 @@ log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno
 log_cli_date_format = %Y-%m-%d %H:%M:%S
 
 markers =
-    integration: marks tests as integration tests
-    smoke: marks tests as smoke tests
+    integration: marks tests as integration tests (медленные тесты с реальными API)
+    smoke: marks tests as smoke tests (быстрые проверки основного функционала)
 
 asyncio_mode = auto
 pythonpath = src/service
