--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,11 @@ python-dotenv>=1.0.0
 # API Integrations
 neoapi-sdk==0.1.3
 requests>=2.31.0
+python-telegram-bot[webhooks]==20.7
 
 # Cache & Storage
 redis==5.0.1
-aioredis==2.0.1
+redis[hiredis]>=5.0.1
 
 # Testing
 pytest>=7.4.0
